Boolean constructor call
Change-Id: Ic5a16598b1f1ac4f53ab651064b872316abafde0
Issue-ID: SO-437
Signed-off-by: Munir Ahmad <munir.ahmad@bell.ca>